--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,45 @@
 {
     "name": "apeli/apelimailers",
-    "description": "A modern PHP email library with advanced features",
+    "description": "A standalone PHP email library with SMTP, templating, and analytics",
     "type": "library",
     "license": "MIT",
+    "keywords": ["email", "smtp", "mailer", "php"],
     "autoload": {
         "psr-4": {
             "ApeliMailers\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "ApeliMailers\\Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "symfony/mailer": "^6.0",
-        "twig/twig": "^3.0",
-        "guzzlehttp/guzzle": "^7.0"
+        "ext-openssl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "mockery/mockery": "^1.4"
+        "mockery/mockery": "^2.0",
+        "phpstan/phpstan": "^1.9",
+        "squizlabs/php_codesniffer": "^3.7"
+    },
+    "scripts": {
+        "test": "phpunit",
+        "lint": "phpcs --standard=PSR12 src tests",
+        "analyse": "phpstan analyse",
+        "check": [
+            "@lint",
+            "@analyse",
+            "@test"
+        ]
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
